WIP on category + candidate

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -30,6 +30,30 @@ body {
     border-radius: 2px;
 }
 
+.table td, .table th {
+    vertical-align: middle;
+}
+
+.media {
+    align-items: center;
+
+    &.user {
+        .title {
+            font-size: 1.2rem;
+            font-weight: 600;
+        }
+
+        .subtitle {
+            font-size: 1rem;
+            font-weight: 400;
+        }
+    }
+}
+
+/**
+ * App Styles
+ */
+
 .nav {
     position: fixed;
     top: 0;
@@ -207,6 +231,10 @@ body {
 
 .is-fit {
     width: 1px;
+}
+
+.candidate-picture {
+    background: #f5f5f5;
 }
 
 /**
