--- a/resources/views/layouts/main.njk
+++ b/resources/views/layouts/main.njk
@@ -2,15 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta name="csrf-token" value="{{ csrfToken }}" />
   <title>{{ page_title }} - STI College Novaliches Mr. and Ms. STI</title>
   <link rel="stylesheet" type="text/css" href="{{ mix('/assets/css/bulma.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ mix('/assets/css/main.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ mix('/assets/css/font-awesome.css') }}" />
+  <script type="text/javascript">
+    var SOCKET_URL = '{{ config("socket.url") }}'
+  </script>
 </head>
-<body>
+<body class="{{ body_class }}">
   <div id="app">
     {% block content %}{% endblock %}
   </div>
+
+
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '263725634113576',
+        cookie     : true,
+        xfbml      : true,
+        version    : 'v2.8'
+      });
+      FB.AppEvents.logPageView();
+    };
+
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "//connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
+  </script>
 
   <script src="{{ mix('/assets/js/manifest.js') }}"></script>
   <script src="{{ mix('/assets/js/vendor.js') }}"></script>
