WIP on voting feature

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -282,6 +282,16 @@ body {
     background: #f5f5f5;
 }
 
+.vote-count {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+}
+
+.vote-button.is-success {
+    pointer-events: none;
+}
+
 /**
  * Transitions
  */
