--- a/resources/views/index.njk
+++ b/resources/views/index.njk
@@ -45,7 +45,7 @@
                   <h1 class="title has-text-right">{{ '{{ user.name }}' }}</h1>
 
                   <h2 class="subtitle has-text-right">
-                    <a href="{{ route('auth.logout') }}">
+                    <a href="{{ route('auth.logout') }}" @click.prevent="logout">
                       <span class="icon is-small">
                         <i class="fa fa-sign-out"></i>
                       </span>
@@ -57,7 +57,7 @@
 
                 <div class="media-right">
                   <figure class="image is-64x64">
-                    <img :src="user.picture.data.url" />
+                    <img :src="user.avatar" />
                   </figure>
                 </div>
               </div>
@@ -69,22 +69,49 @@
   </section>
 
   <div class="container has-contents-below">
-    <div class="columns" v-for="category in entries">
-      <div class="column">
-        <h1 class="title">{{ '{{ category.name }}' }}</h1>
+    {% raw %}
+      <div class="columns" v-for="(category, categoryId) in entries">
+        <div class="column">
+          <h1 class="title">{{ category.name }}</h1>
 
-        <div class="columns">
-          <div class="column" v-for="candidate in category.candidates">
-            <div class="card">
-              <div class="card-image">
-                <figure class="image is-1by1">
-                  <img :src="'/storage/' + candidate.picture_path" alt="Image" />
-                </figure>
-              </div>
-              <div class="card-content">
-                <div class="media">
-                  <div class="media-content">
-                    <p class="title is-4">{{ '{{ candidate.name }}' }}</p>
+          <div class="columns">
+            <div class="column" v-for="(candidate, candidateId) in category.candidates">
+              <div class="card">
+                <div class="card-image">
+                  <figure class="image is-1by1">
+                    <img :src="'/storage/' + candidate.picture_path" alt="Image" />
+                    <span class="tag vote-count" :class="{
+                      'is-light': candidate.votes == 0,
+                      'is-info': candidate.votes > 0 }">
+                        <span>{{ candidate.votes }}&nbsp;</span>
+                        <span v-if="candidate.votes == 1">vote</span>
+                        <span v-else>votes</span>
+                      </span>
+                  </figure>
+                </div>
+                <div class="card-content">
+                  <div class="media">
+                    <div class="media-content">
+                      <p class="title is-4">{{ candidate.name }}</p>
+
+                      <div v-if="user">
+                        <button class="button is-small is-fullwidth vote-button"
+                          :class="{ 'is-success': isVoted(candidate.id) }"
+                          :disabled="isCategoryTaken(category.id) && !isVoted(candidate.id)"
+                          @click="vote(category.id, candidate.id)">
+
+                          <span class="icon is-small">
+                            <i class="fa" :class="{
+                              'fa-thumbs-o-up': !candidate.selected,
+                              'fa-check': candidate.selected
+                            }"></i>
+                          </span>
+
+                          <span v-if="isVoted(candidate.id)">Voted</span>
+                          <span v-else>Vote</span>
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -92,7 +119,7 @@
           </div>
         </div>
       </div>
-    </div>
+    {% endraw %}
   </div>
 
   <footer class="footer">
@@ -127,4 +154,10 @@
       </footer>
     </div>
   </b-modal>
+{% endblock %}
+
+{% block scripts %}
+  <script type="text/javascript">
+    var user = {{ user | json | safe }}
+  </script>
 {% endblock %}
