--- a/resources/views/layouts/main.njk
+++ b/resources/views/layouts/main.njk
@@ -37,6 +37,8 @@
      }(document, 'script', 'facebook-jssdk'));
   </script>
 
+  {% block scripts %}{% endblock %}
+
   <script src="{{ mix('/assets/js/manifest.js') }}"></script>
   <script src="{{ mix('/assets/js/vendor.js') }}"></script>
   <script src="{{ mix('/assets/js/app.js') }}"></script>
