Optimize candidate loading

--- a/resources/views/dashboard/candidate/index.njk
+++ b/resources/views/dashboard/candidate/index.njk
@@ -39,7 +39,7 @@
         {% for candidate in result.toJSON() %}
           <tr>
             <td>
-              <div class="media user">
+              <div class="media">
                 <div class="media-left">
                   <figure class="image is-48x48">
                     <img src="/storage/{{ candidate.thumb_path }}" alt="Candidate Photo" />
