--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -47,13 +47,32 @@ body {
 
     &.user {
         .title {
-            font-size: 1.2rem;
+            font-size: 1.4rem;
             font-weight: 600;
+
+            small {
+                display: block;
+                font-size: 0.8rem;
+                font-weight: 400;
+                text-align: left;
+                color: #999;
+            }
+
+            margin-bottom: 0.1rem;
         }
 
         .subtitle {
             font-size: 1rem;
             font-weight: 400;
+        }
+
+        p {
+            margin: 0;
+            color: #fff;
+        }
+
+        .button.is-small {
+            height: 1.2rem;
         }
     }
 }
