--- a/resources/views/layouts/main.njk
+++ b/resources/views/layouts/main.njk
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="csrf-token" value="{{ csrfToken }}" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ page_title }} - STI College Novaliches Mr. and Ms. STI</title>
   <link rel="stylesheet" type="text/css" href="{{ mix('/assets/css/bulma.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ mix('/assets/css/main.css') }}" />
