Show vote count in dashboard

--- a/resources/views/dashboard/candidate/index.njk
+++ b/resources/views/dashboard/candidate/index.njk
@@ -31,6 +31,7 @@
       <thead>
         <tr>
           <th>Name</th>
+          <th>Votes</th>
           <th class="is-fit">Actions</th>
         </tr>
       </thead>
@@ -62,6 +63,7 @@
                   </div>
               </div>
             </td>
+            <td>{{ candidate.votes|length }}</td>
             <td>
               <div class="field is-grouped">
                 <p class="control">
