--- a/resources/views/layouts/main.njk
+++ b/resources/views/layouts/main.njk
@@ -2,8 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <!--
+    ╭──────────────────────────────────────────╮
+    │        Front-end & Back-end Dev't        │
+    ╞══════════════════════════════════════════╡
+    │             RAPHAEL MARCO                │
+    │                                          │
+    │           pinodex.github.io              │
+    │        raphaelmarco@outlook.com          │
+    ╰──────────────────────────────────────────╯
+  -->
   <meta name="csrf-token" value="{{ csrfToken }}" />
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+{% if extended_meta_tags %}
+  <meta name="description" content="Vote your Mr. and Ms. STI for the Netizen&lsquo;s Award" />
+  <meta property="og:title" content="{{ page_title }} - STI College Novaliches Mr. and Ms. STI" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="{{ config('app.base_url') + request.url() }}" />
+  <meta property="og:description" content="Vote your Mr. and Ms. STI for the Netizen&lsquo;s Award" />
+  <meta property="og:image" content="{{ config('app.base_url') }}/assets/img/og-image.png" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="/assets/icon/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="/assets/icon/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="/assets/icon/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="/assets/icon/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="/assets/icon/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="/assets/icon/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/assets/icon/apple-touch-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon-180x180.png" />
+  <link rel="icon" type="image/png" href="/assets/icon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/assets/icon/android-chrome-192x192.png" sizes="192x192" />
+  <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="/assets/icon/favicon-16x16.png" sizes="16x16" />
+  <link rel="manifest" href="/assets/icon/manifest.json" />
+  <link rel="mask-icon" href="/assets/icon/safari-pinned-tab.svg" color="#006db7" />
+  <link rel="shortcut icon" href="/assets/icon/favicon.ico" />
+  <meta name="msapplication-TileColor" content="#fff001" />
+  <meta name="msapplication-TileImage" content="/assets/icon/mstile-144x144.png" />
+  <meta name="msapplication-config" content="/assets/icon/browserconfig.xml" />
+  <meta name="theme-color" content="#006db7" />
+{% endif %}
   <title>{{ page_title }} - STI College Novaliches Mr. and Ms. STI</title>
   <link rel="stylesheet" type="text/css" href="{{ mix('/assets/css/bulma.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ mix('/assets/css/main.css') }}" />
@@ -17,7 +56,7 @@
   <script>
     window.fbAsyncInit = function() {
       FB.init({
-        appId      : '263725634113576',
+        appId      : '{{ config('facebook.app_id') }}',
         cookie     : true,
         xfbml      : true,
         version    : 'v2.8'
@@ -26,12 +65,20 @@
     };
 
     (function(d, s, id){
-       var js, fjs = d.getElementsByTagName(s)[0];
-       if (d.getElementById(id)) {return;}
-       js = d.createElement(s); js.id = id;
-       js.src = "//connect.facebook.net/en_US/sdk.js";
-       fjs.parentNode.insertBefore(js, fjs);
-     }(document, 'script', 'facebook-jssdk'));
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) {return;}
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', '{{ config('app.google_analytics_code') }}', 'auto');
+    ga('send', 'pageview');
   </script>
 
   {% block scripts %}{% endblock %}
