--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -42,6 +42,22 @@ body {
     vertical-align: middle;
 }
 
+.title {
+  font-weight: 400;
+}
+
+.subtitle {
+  font-weight: 400;
+}
+
+.panel {
+  .panel-heading {
+    background: #fff;
+    font-size: 1.1rem;
+    font-weight: 400;
+  }
+}
+
 .media {
     align-items: center;
 
@@ -86,7 +102,6 @@ body {
 
         p {
             margin: 0;
-            color: #fff;
         }
 
         .button.is-small {
