Add v-cloak to index page

--- a/resources/views/index.njk
+++ b/resources/views/index.njk
@@ -78,7 +78,7 @@
     </div>
   </section>
 
-  <div class="container has-contents-below">
+  <div class="container has-contents-below" v-cloak>
     {% raw %}
       <div class="columns" v-for="category in categories">
         <div class="column">
