--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -30,7 +30,7 @@ body {
 /**
  * Overrides
  */
-[v-if], [v-else], [v-show], b-modal {
+[v-if], [v-else], [v-show], [v-cloak], b-modal {
     display: none;
 }
 
