--- a/resources/views/layouts/main.njk
+++ b/resources/views/layouts/main.njk
@@ -13,7 +13,7 @@
     ╰──────────────────────────────────────────╯
   -->
   <meta name="csrf-token" value="{{ csrfToken }}" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 {% if extended_meta_tags %}
   <meta name="description" content="Vote your Mr. and Ms. STI for the Netizen&lsquo;s Award" />
   <meta property="fb:app_id" content="{{ config('facebook.app_id') }}" />
