Add TOS and privacy policy

--- a/resources/views/index.njk
+++ b/resources/views/index.njk
@@ -165,6 +165,11 @@
     <div class="container">
       <div class="content has-text-centered">
         <p>STI College Novaliches</p>
+        <p>
+          <a href="{{ route('docs.tos') }}">Terms of Service</a>
+          <span>&bullet;</span>
+          <a href="{{ route('docs.pp') }}">Privacy Policy</a>
+        </p>
       </div>
     </div>
   </footer>
