--- a/resources/views/layouts/main.njk
+++ b/resources/views/layouts/main.njk
@@ -25,20 +25,20 @@
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-touch-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="60x60" href="/assets/icon/apple-touch-icon-60x60.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="/assets/icon/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/icon/apple-touch-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="/assets/icon/apple-touch-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="/assets/icon/apple-touch-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="/assets/icon/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/icon/apple-touch-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon-180x180.png" />
-  <link rel="icon" type="image/png" href="/assets/icon/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/assets/icon/android-chrome-192x192.png" sizes="192x192" />
-  <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/png" href="/assets/icon/favicon-16x16.png" sizes="16x16" />
-  <link rel="shortcut icon" href="/assets/icon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="57x57" href="{{ asset('/assets/icon/apple-touch-icon-57x57.png') }}" />
+  <link rel="apple-touch-icon" sizes="60x60" href="{{ asset('/assets/icon/apple-touch-icon-60x60.png') }}" />
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ asset('/assets/icon/apple-touch-icon-72x72.png') }}" />
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ asset('/assets/icon/apple-touch-icon-76x76.png') }}" />
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ asset('/assets/icon/apple-touch-icon-114x114.png') }}" />
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ asset('/assets/icon/apple-touch-icon-120x120.png') }}" />
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ asset('/assets/icon/apple-touch-icon-144x144.png') }}" />
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ asset('/assets/icon/apple-touch-icon-152x152.png') }}" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('/assets/icon/apple-touch-icon-180x180.png') }}" />
+  <link rel="icon" type="image/png" href="{{ asset('/assets/icon/favicon-32x32.png') }}" sizes="32x32" />
+  <link rel="icon" type="image/png" href="{{ asset('/assets/icon/android-chrome-192x192.png') }}" sizes="192x192" />
+  <link rel="icon" type="image/png" href="{{ asset('/assets/icon/favicon-96x96.png') }}" sizes="96x96" />
+  <link rel="icon" type="image/png" href="{{ asset('/assets/icon/favicon-16x16.png') }}" sizes="16x16" />
+  <link rel="shortcut icon" href="{{ asset('/assets/icon/favicon.ico') }}" />
 {% endif %}
   <title>{{ page_title }} - STI College Novaliches</title>
   <link rel="stylesheet" type="text/css" href="{{ mix('/assets/css/bulma.css') }}" />
