--- a/resources/views/docs/privacy-policy.njk
+++ b/resources/views/docs/privacy-policy.njk
@@ -1,6 +1,6 @@
 {% extends '../layouts/main' %}
 
-{% set page_title = 'Terms Of Service' %}
+{% set page_title = 'Privacy policy' %}
 {% set body_class = 'main-page' %}
 
 {% block content %}
@@ -45,7 +45,7 @@
     <div class="columns">
       <div class="column is-6">
         <div class="content">
-          <h1 class="title">Privacy Policy</h1>
+          <h1 class="title">Privacy policy</h1>
 
           <p></p>
 
